# Rust_Actix_CRUD

./: Cargo.toml  README.md  exercise_data.db
src/: main.rs  routes.rs
src/controllers/: exercise_controller.rs  mod.rs
src/models/: models.rs
src/views/: exercise_view.rs  mod.rs
static/: main.css
templates/: index.html
