[package]
name = "Rust_Actix_CRUD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tera = "1.19.1"
serde = { version =  "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

tokio = { version = "1.35.1", features = ["full"] }
actix-files = "0.6.5"
rusqlite =  { version = "0.30.0", features = ["bundled"] }